[package]
name = "simple-os"
version = "0.1.0"
edition = "2024"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "simple-os"
test = false
bench = false

[package.metadata.bootimage]
run-command = ["F:\\qemu\\qemu-system-x86_64", "-drive", "format=raw,file={}"]

[dependencies]
bootloader = "0.9"
